# mini-system-f-impred

./: .gitignore  ejemplo.x  mini-system-f-impred.cabal  stack.yaml
src/: Main.hs  Parser.hs  Pretty.hs  Reconstruction.hs  Solver.hs  Syntax.hs
