name:                mini-system-f-impred
version:             0.1.0.0
-- synopsis:
-- description:
author:              Alejandro Serrano
maintainer:          A.SerranoMena@uu.nl
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable mini-system-f-impred
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5,
                       unbound-generics,
                       parsec,
                       ansi-terminal > 0.6,
                       mtl > 2.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
